4주차/gaeul/demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
  labels:
    app: demo
    sbom-verified: "true"
spec:
  containers:
    - name: app
      image: ghcr.io/gaeul3303/hello-slsa:v1
      imagePullPolicy: IfNotPresent
